fixed bug on mobile CSS where Graveyards weren't working properly

--- a/css/style.css
+++ b/css/style.css
@@ -15,18 +15,14 @@ ol {
     letter-spacing: 0.5px;
 }
 
-#p1-ship-graveyard-mobile {
-    height: 0px;
-    width: 0px;
-    visibility: collapse;
-}
-
 #game-info-display,
 #instructions,
 #turn-display {
     
     margin-left: auto;
     margin-right: auto;
+    margin-top: 0px;
+    margin-bottom: 0px;
     height: 40px;
     padding: 0px;
     display: flex;
@@ -77,7 +73,8 @@ ol {
     align-items: center;
 }
 
-#entire-p2-board {
+#entire-p2-board,
+#entire-p1-board {
     display: flex;
 }
 
@@ -225,13 +222,15 @@ ol {
     .title {
         color:antiquewhite;
         margin-top: -40px;
+        margin-left: auto;
+        margin-right: 10px;
         font-size: 28px;
         height: 150px;
         width: 400px;
         padding: 0px 0px 0px 0px;
         display: flex;
         align-items:last baseline;
-        justify-content:center;
+        justify-content: center;
         background-image: url(../assets/NicePng_aircraft-carrier-png_2203212.png);
         background-size: 400px 113px;
         background-repeat: no-repeat;
@@ -247,18 +246,23 @@ ol {
         flex-direction: column;
         gap: 0px;
         align-content: flex-start;
+        margin-right: 10px;
 
     }
 
     #turn-display {
         padding: 0px;
-        margin: 0px;
+        margin: 0px 0px 5px;
+        display: flex;
+        text-align: center;
+        height: 25px;
     }
 
     #game-info-display {
         display: flex;
         padding: 0px;
         margin: 0px;
+        height: 25px;
     }
 
     #instruction-list {
@@ -274,8 +278,7 @@ ol {
     #all-game-boards {
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
-        margin: 0px 0px 0px -90px;
+        margin: 0px 0px 0px 0px;
         top: 200px;
         left: 0px;
     }
@@ -286,10 +289,9 @@ ol {
         width: 280px;
     }
 
-    #p1-ship-graveyard {
-        visibility: hidden;
-        height: 0px;
-        padding: 0px;
+    #p2-display, 
+    #p1-display {
+        display: flex;
     }
 
     .board-label {
@@ -304,7 +306,7 @@ ol {
         height: 30px;
         width: 100px;
         font-size:medium;
-        margin: 10px 25px 10px 25px;
+        margin: 5px 25px 5px 25px;
     }
 
     .board-square {
@@ -312,23 +314,28 @@ ol {
         height: 28px;
     }
 
-    #p1-ship-graveyard-mobile,
+    #p1-ship-graveyard,
     #p2-ship-graveyard {
         display: flex;
         flex-direction: column;
-        visibility: visible;
         font-size: small;
         padding: 30px 0px 0px 0px;
         letter-spacing: 1px;
         height: 280px;
-        width: 0;
+        width: 100px;
         justify-content: space-evenly;
         margin: 0px;
+        align-items: flex-start;
     }
 
-    #entire-p1-board,
+    #entire-p1-board {
+        display: flex;
+        flex-direction: row-reverse;
+    }
     #entire-P2-board {
         display: flex;
+        flex-direction: row;
+        align-content: flex-start;
     }
 
     #p1-carrier {
@@ -372,6 +379,7 @@ ol {
 
     li {
         height: 0;
+        font-size: 0px;
     }
 }
 
@@ -416,9 +424,10 @@ ol {
         width: 30px;
     }
     
-    #p1-ship-graveyard-mobile,
+    #p1-ship-graveyard,
     #p2-ship-graveyard {
         height: 250px;
+        width: 100px;
     }
 
     .board-label {
@@ -441,16 +450,16 @@ ol {
 
     .title {
         color:antiquewhite;
-        margin-top: -40px;
-        font-size: 28px;
+        margin-top: -50px;
+        font-size: 25px;
         height: 150px;
-        width: 380px;
+        width: 360px;
         padding: 0px 0px 0px 0px;
         display: flex;
         align-items:last baseline;
         justify-content:center;
         background-image: url(../assets/NicePng_aircraft-carrier-png_2203212.png);
-        background-size: 380px 113px;
+        background-size: 360px 105px;
         background-repeat: no-repeat;
         background-position: bottom;
     }
@@ -459,5 +468,12 @@ ol {
     #start-button {
         margin: 1px 10px;
     }
+
+    #game-info-display,
+    #turn-display {
+        height: 25px;
+        font-size: 15px;
+    }
+
 
 }
